# milk-saas

./: .env.example  .gitignore  README.md  migrar_planos.py  pyproject.toml  setup_db.py  vercel.json
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  corrigir_banco.py  estrutura_backend.txt  main.py  pyproject.toml  requirements.txt  verificar_media.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py
backend/app/api/routers/: animals.py  finance.py  milk.py
backend/app/core/: security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  animal.py  finance.py  milk.py
backend/tests/: conftest.py
backend/tests/api/: test_animals.py  test_auth.py
frontend/: middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
frontend/i18n/: request.ts
frontend/lib/: api.ts
frontend/messages/: en.json  pt.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/animals/: page.tsx
frontend/src/app/animals/new/: page.tsx
frontend/src/app/components/: Navbar.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/finance/: page.tsx
frontend/src/app/finance/cost-per-liter/: page.tsx
frontend/src/app/finance/new/: page.tsx
frontend/src/app/login/: LoginContent.tsx  page.tsx
frontend/src/app/milk/: page.tsx
frontend/src/app/milk/new/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
(+3 files in other folders)
