[project]
name = "milk-saas"
version = "0.1.0"
description = "SaaS para gestão de pecuária leiteira em Cedro"
authors = [
    {name = "João Paulo Lima"}
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Seleciona regras de erro (E), Pyflakes (F), Isort (I), Upgrade (UP), Bugbear (B) e Comprehensions (C4)
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true